maalstroom/resources/style.css
/* ... */
nav a {
	color: #38a3af;
}

nav a:link {
	color: #38a3af;
}
nav a:visited {
	color: #38a3af;
}
nav a:hover {
	color: #ffffff;
}
.right-icons {
	color: #ffffff;
	border: 0;
	float: right;
	display: inline;
	position: absolute;
	top: 0;
	right: 0;
}
.right-icons ul {
	margin: 2px;
	padding-top: .4em;
}
.right-icons li {
	display: inline;
	margin: 0;
	padding-right: 2em;
}
.mail-wrapper {
	float: right;
}
#mail-icon {
background: url("morphis://.dmail/images/mail_icon.png") no-repeat right top;
border: 0;
height: 29px;
width: 29px;
}
.mail-icon-number {
	float: right;
	height: 16px;
	border-radius: 10px;
	border: 1px solid #141c30;
	background-color: #b025be;
	font-size: 8px;
	padding-left: .5em;
	padding-right: .7em;
	padding-top: .2em;
	color: #ffffff;
	font-weight: bold;
}
#list-addresses {
background: url("morphis://.dmail/images/list_addresses.png") no-repeat top left;
display: inline-block;
height: 20px;
width: 16px;
margin-top: 1.4em;
margin-right: 1em;
}
#new-address {
background: url("morphis://.dmail/images/add_address.png") no-repeat top left;
display: inline-block;
height: 20px;
width: 17px;
margin-top: 1.4em;
margin-right: 1em;
}
#addressbook {
background: url("morphis://.dmail/images/addressbook.png") no-repeat top left;
display: inline-block;
height: 20px;
width: 16px;
margin-top: 1.4em;
margin-right: 1em;
}
#settings {
background: url("morphis://.dmail/images/settings.png") no-repeat top left;
display: inline-block;
height: 20px;
width: 17px;
margin-top: 1.4em;
margin-right: 1.5em;
}
.nav-new-icon {
	background: url("morphis://.dmail/images/compose_blue.png") no-repeat left center;
}
.nav-new-icon:hover {
	background: url("morphis://.dmail/images/compose_white.png") no-repeat left center;
}
.nav-reply-icon {
	background: url("morphis://.dmail/images/reply_blue.png") no-repeat left center;
}
.nav-reply-icon:hover {
	background: url("morphis://.dmail/images/reply_white.png") no-repeat left center;
}
.nav-delete-icon {
	background: url("morphis://.dmail/images/trash_blue.png") no-repeat left center;
}
.nav-delete-icon:hover {
	background: url("morphis://.dmail/images/trash_white.png") no-repeat left center;
}
.nav-version-icon {
	background: url("morphis://.dmail/images/reply_icon.png") no-repeat left center;
}
.nav-connections-icon {
	background: url("morphis://.dmail/images/reply_icon.png") no-repeat left center;
}
a.tooltips {
	position: relative;
	display: inline;
}
a.tooltips span {
	position: absolute;
	width:140px;
	color: #FFFFFF;
	background: #1F2B4A;
	height: 28px;
	line-height: 28px;
	text-align: center;
	visibility: hidden;
	border-radius: 4px;
	transition: opacity .25s ease-in-out;
	-moz-transition: opacity .25s ease-in-out;
	-webkit-transition: opacity .25s ease-in-out;
	opacity: 0;
}
a.tooltips span:after {
	content: '';
	position: absolute;
	top: 50%;
	left: 100%;
	margin-top: -8px;
	width: 0;
	height: 0;
	border-left: 8px solid #1F2B4A;
	border-top: 8px solid transparent;
	border-bottom: 8px solid transparent;
	transition: opacity .25s ease-in-out;
	-moz-transition: opacity .25s ease-in-out;
	-webkit-transition: opacity .25s ease-in-out;
}
a:hover.tooltips span {
	visibility: visible;
	opacity: 1;
	right: 100%;
	top: 50%;
	margin-top: -17px;
	margin-right: 15px;
	z-index: 999;
}

/*Styles for Message list*/
table.field {
	margin: 0;
	padding: 0;
	border-spacing: 0;
}
table.field tr {
	margin: 0;
	padding: 0;
}
table.field td {
	margin: 0;
	padding: 0;
}

table.msg_list {
	border-collapse: collapse;
	background-color: #ffffff;
	border-spacing: 0;
}
table.msg_list td {
	max-width: 10em;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	border-bottom: 1px solid #e5e5e5;
}
table.msg_list tr {
	border-spacing: 0;
}
table.msg_list tr:hover, table.msg_list tr:hover a {
	background-color: #38a3af;
	color: #ffffff;
}
table.msg_list tr.table-head {
	border-spacing: 0;
	background-color: #d2d4d9;
	font-size: .8em;
}
table.msg_list tr.table-head:hover {
	background-color: #d2d4d9;
	color: #000000;
}
.subject {
	overflow: hidden;
	text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
	-o-text-overflow: ellipsis;  // for Opera 9 & 10
	display: block;
	white-space: nowrap;
}
.new-mail-icon {
	background: url("morphis://.dmail/images/unread.png") no-repeat center center;
	height: 12px;
	width: 12px;
}
.mail-icon {
	background: url("morphis://.dmail/images/read.png") no-repeat center center;
	height: 12px;
	width: 12px;
}
.reply-icon {
	background: url("morphis://.dmail/images/reply_icon.png") no-repeat center center;
	height: 13px;
	width: 15px;
}
.trash-icon {
	background: url("morphis://.dmail/images/trash_icon.png") no-repeat center center;
	height: 13px;
	width: 11px;
}
.reply-icon-new {
	background: url("morphis://.dmail/images/reply_icon_new.png") no-repeat center center;
	height: 13px;
	width: 15px;
}
.trash-icon-new {
	background: url("morphis://.dmail/images/trash_icon_new.png") no-repeat center center;
	height: 13px;
	width: 11px;
}
.new-mail {
	background-color: #badfe3;
	border-bottom: 1px solid #e5e5e5;
	font-weight: bold;
	color: #141c30;
}
.link-button {
	height: 31px;
	background: url("morphis://.dmail/images/gradient.jpg") top left repeat-x;
	margin-left: 0.5em;
	float: right;
	line-height: 31px;
	text-align: center;
	padding-left: 1em;
	padding-right: 1em;
	margin-top: 1em;
	border-radius: .5em;
	-moz-box-shadow: inset 1px 1px 1px #e6e6e6;
	-webkit-box-shadow: inset 1px 1px 1px #e6e6e6;
	box-shadow: inset 1px 1px 1px #e6e6e6;
	border: 1px solid #bcbec2;
	white-space: nowrap;
}
.link-button:hover {
	background: #bcbec3;
	-moz-box-shadow: inset 1px 1px 1px #aaabaf;
	-webkit-box-shadow: inset 1px 1px 1px #aaabaf;
	box-shadow: inset 1px 1px 1px #aaabaf;
	border: 1px solid #999999;
}
.inbox-head {
	font: 3em "Open Sans Light", sans-serif;
}
.inbox-pad {
	padding: .3em;
}
.inline_block {
	display: inline-block;
}
.hidden {
	visibility: hidden;
}
.display_none {
	display: none;
}
/* ... */

